# SFMP

./: README.md  pyproject.toml  requirements.txt
AWQ/: BCQLinear.py  QuantLinear.py  awq.py  base.py  bitallocation.py  datautils.py  eval.py  mix-llama-awq.py  utils.py
Analyze/: global_block_importance.py
EfficientQAT/: datautils_e2e.py  example.sh  main_block_ap.py  main_e2e_qp.py  requirements.txt  run.sh
EfficientQAT/examples/block_ap/Llama-2-13b/: w2g128-c4-trainsize512.sh  w3g128-c4-trainsize512.sh
EfficientQAT/examples/block_ap/Llama-2-7b/: w2g128-c4-trainsize512.sh  w2g128-wikitext2-trainsize512.sh  w2g64-c4-trainsize512.sh  w2g64-wikitext2-trainsize512.sh  w3g128-c4-trainsize512.sh  w3g128.sh
EfficientQAT/examples/block_ap/Llama-3-8b/: w2.75g128-c4.sh  w2g128-c4-trainsize0.sh  w2g128-c4-trainsize1024.sh  w2g128-c4-trainsize128.sh  w2g128-c4-trainsize256.sh  w2g128-c4-trainsize512.sh  w2g128-wikitext2-trainsize512.sh  w2g128.sh  w2g64-c4-trainsize512.sh  w2g64-wikitext2-trainsize512.sh  w3g128-c4-trainsize512.sh  w3g128-redjapama-trainsize512.sh
EfficientQAT/examples/e2e_qp/Llama-2-13b/: w2g128-c4.sh  w3g128-c4.sh
EfficientQAT/examples/e2e_qp/Llama-2-7b/: w2g128-c4.sh  w2g64-c4.sh  w3g128-c4.sh
EfficientQAT/examples/e2e_qp/Llama-3-8b/: w2g128-c4.sh  w2g128-redpajama.sh  w2g128-wikitext2.sh  w2g64-c4.sh  w3g128-c4.sh  w3g128-redpajama.sh
EfficientQAT/quantize/: block_ap.py  int_linear_fake.py  int_linear_real.py  quantizer.py  utils.py
GPTQ/: datautils.py  gptq.py  measure.py  mix-llama.py  quant.py  utils.py
Inference/CPU/C++/: CMakeLists.txt  README.md  tokenizer_test.txt
Inference/CPU/C++/common/: CMakeLists.txt
Inference/CPU/C++/common/include/: Allocate.h  common.h  fileutils.h  threadpool.h
Inference/CPU/C++/common/src/: fileutils.cpp
Inference/CPU/C++/examples/: CMakeLists.txt  main.cpp
Inference/CPU/C++/examples/models/: llama.cpp  llama.h
Inference/CPU/C++/ops/: CMakeLists.txt
Inference/CPU/C++/ops/include/: ops.h
Inference/CPU/C++/ops/include/arm/: arm_activation.h  arm_argmax.h  arm_attention.h  arm_cache.h  arm_device.h  arm_embedding.h  arm_gemm.h  arm_gemv.h  arm_nnstructures.h  arm_rmsnorm.h  arm_rotary.h  arm_t_mac_kernal.h  parameters.h
Inference/CPU/C++/ops/src/arm/: arm_activation.cpp  arm_argmax.cpp  arm_attention.cpp  arm_cache.cpp  arm_embedding.cpp  arm_gemm.cpp  arm_gemv.cpp  arm_rmsnorm.cpp  arm_rotary.cpp  arm_t_mac_kernal.cpp  parameters.cpp
Inference/GPU/bcqinference/: BCQLinear.py  README.md  convert_to_bcqmodel.py  generate.py  model.py  plugin.py  run.sh  test.py  utils.py
Inference/GPU/bcqinference/custom_kernel/: anybcq.cu  anybcq.h  do_install.sh  gemv.cu  gemv.h  lutgemm_v1.cu  lutgemm_v2.cu  setup.py
eval/: eval.py
salience/: datautils.py  run.py  sensitivity.py
scripts/: export2bcq.py
sfmp/: BCQLinear.py  QuantLinear.py  __init__.py  bitallocation.py  utils.py
